# midas-sheet

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  test_typing.py  tmp.md
docs/: developer-guide.md  handover.md
src/: __init__.py  database.py
src/auth/: __init__.py  oauth.py
src/bot/: __init__.py  auth_handlers.py  bot.py  commands.py  handlers.py
src/config/: __init__.py  categories.py  categories.yaml
src/db/: database.py
src/server/: __init__.py  oauth_server.py
src/sheets/: __init__.py  client.py  operations.py
src/utils/: __init__.py  config.py  logger.py
tests/: README.md  __init__.py  conftest.py  test_bot.py  test_commands.py  test_handlers.py  test_sheets.py
tests/auth/: test_token_refresh.py
