[project]
name = "finanzas"
version = "0.1.0"
description = "Bot para agregar gastos financieros a una hoja excel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
